@@ -28,7 +28,8 @@ public class AppGestionProduitsAvecStream {
                  .sorted((p1,p2)->Double.compare(p1.getPrice(), p2.getPrice()))
                  .map((p)-> new Product(p.getId(), p.getLabel().toUpperCase(), p.getPrice() , p.getFeatures()))
                  //.map((p) -> { p.setLabel(p.getLabel().toUpperCase()); return p; })
-                 .collect(Collectors.toList());
+                 //.collect(Collectors.toList()); //depuis java 8
+                 .toList();//ok en java 17
         
         //exemple de lambda pour .map(...)
         // (p) -> { p.setLabel(p.getLabel().toUpperCase()); return p; }
